// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dot renders correctly 1`] = `
<DocumentFragment>
  .cache-1ey9frj-StyledDot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
}

<div
    class="e6t57f80 cache-1ey9frj-StyledDot"
  />
</DocumentFragment>
`;

exports[`Dot renders with color 1`] = `
<DocumentFragment>
  .cache-150whab-StyledDot {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: hotpink;
}

<div
    class="e6t57f80 cache-150whab-StyledDot"
  />
</DocumentFragment>
`;
